# GEC-6818

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  compose.yaml  toolchain.cmake
app/: CMakeLists.txt  app.c  app.h  main.c
docs/: notes.md
src/: CMakeLists.txt  bmp.c  bmp.h  display.c  display.h  font.h  lcd_control.c  lcd_control.h  menu.c  menu.h  render.c  render.h  touch.c  touch.h  ui.c  ui.h
src/utils/: CMakeLists.txt  font.h  lcd_control.c  lcd_control.h  led_control.c  led_control.h  module_control.c  module_control.h  render.c  render.h  touch.c  touch.h
